--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "files": [
     "dist/*"
   ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@cyperdark"
+  },
   "scripts": {
     "build": "tsc",
     "test": "node test.js"
